Revise title and personal details in index.html
Updated personal information and refined text for clarity.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Juan Ruiz - Science Educator</title>
+        <title>Juan Ruiz - Scientist</title>
         <link rel="stylesheet" href="https://cdjns.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <script src="https://kit.fontawesome.com/5f0f3e64f1.js" crossorigin="anonymous"></script>
 
@@ -34,7 +34,7 @@
 
         <section class="intro" id="home">
             <h1 class="section__title section__title--intro">
-                Hi, I am <strong>Juan Ruiz</strong>
+                Hi, I am <strong>Juan Alberto Ruiz</strong>
             </h1> 
             <p class="section__subtitle section__subtitle--intro">Researcher & Educator</p>
             <img src="Images/IMG_1765.jpeg" alt="Juan next to an alien" class="intro__img"> 
@@ -46,15 +46,15 @@
             <div class="interests">
                 <div class="interest">
                     <h3>Science Communication and Education</h3>
-                    <p>I am deeply committed to bridging the gap between scientific research and public understanding. I actively work on making complex concepts into accessible, engaging narratives that inspire curiosity and promote lifelong learning. By leveraging innovative communication strategies and digital storytelling, I strive to foster scientific literacy and empower diverse audiences to explore and appreciate the wonders of science. </p>
+                    <p>I am committed to bridging the gap between scientific research and public understanding. I actively work on making complex concepts into accessible, engaging narratives that inspire curiosity and promote lifelong learning. By leveraging communication strategies and storytelling, I strive to foster scientific literacy and empower diverse audiences to explore and appreciate the wonders of science. </p>
                 </div>
                 <div class="interest">
                     <h3>Astrobiolgy</h3>
-                    <p>My interest in astrobiology is deeply intertwined with a fascination for the origins of life. I am particularly drawn to the study of hydrothermal vents, which I believe offer a unique window into the energy-rich environments that could have fostered early biological processes. My curiosity about homochirality—how life’s molecules came to favor one “handedness” over the other—drives my exploration of the chemical nuances that underpin biological systems. </p>
+                    <p>My interest in astrobiology is intertwined with a fascination for the origins of life. I am particularly drawn to the study of hydrothermal vents, which I believe offer a unique window into the energy-rich environments that could have fostered early biological processes. By using a diverse range of authenitic hydrothermal vent samples, I aim to understand how these natural reactors can facilitate prebiotic oligimer assembly. </p>
                 </div>
                 <div class="interest">
                     <h3>Planetary Sciences</h3>
-                    <p>My passion for Planetary Sciences centers on understanding both the evolution of ancient Earth and of icy moons. I’m captivated by the idea that these icy worlds, with their hydrothermal activity, may mimic the energy-rich conditions of early Earth. These complex geochemical environments can be sumulated in the lab, allowing us to explore the potential processes that could have driven the emergence of life. </p>
+                    <p>My passion for Planetary Sciences centers on understanding the porosisity and permeablity of Earth and of icy moons minerals. I’m captivated by the idea that these icy worlds, with their hydrothermal activity, may mimic the energy-rich conditions of early Earth. These complex geochemical environments can be sumulated in the lab, allowing us to explore the potential processes that could have driven the emergence of life. </p>
                 </div>
             </div>
 
@@ -64,11 +64,11 @@
         <!--About Me-->
         <section class="about-me" id="about">
             <h2 class="section__title section__title--about">Who I am</h2>
-            <p class="section__subtitle section__subtitle--about">Science Communicator and Educator @ Lowell Observatory</p>
+            <p class="section__subtitle section__subtitle--about">Graduate Student at ELSI</p>
 
             <div class="about-me__body">
-                <p>Recent graduate with a B.S. in biology, and I am an aspiring astrobiologist.
-                I’m interested in how life arises and co-evolves with its environment here on Earth and possibly other planets and moons in our solar system and how we can use computational methods to model this.</p>
+                <p>Currently a Master's student at Earth-Life Science Institute in Tokyo, Japan. I am an aspiring astrobiologist who studies prebiotic reactions in hydrothermal vents.
+                I’m interested in how life arises and co-evolves with its environment here on Earth and possibly other planets and moons in our solar system and how we can use experimental and computational methods to model this.</p>
                 <p>My time at Lowell Observatory has also shown the importance of communicating science as scientists and educators to the public, as well as between each other, especially in a field as interdisciplinary as astrobiology.
                 I’ve had multiple nights where I’ve gotten to interact with and inspire guests. It has only made me realize how important it is to continue to provide outreach to the public and inspire a new generation of scientists.</p>
             </div>
@@ -101,7 +101,7 @@
 
         <!--Footer-->
         <footer class="footer">
-            <a href="mailto:jr8219180@gmail.com" class="footer-link">jr8219180@gmail.com</a>
+            <a href="mailto:jruiz18@elsi.jp" class="footer-link">jruiz18@elsi.jp</a>
                 <ul class="social-list">
                     <li class="social-list__item">
                         <a class="social-list__link" href="https://github.com/jr2937">
